# pymc-sandbox

./: lefthook.yml  makefile
app/: pyproject.toml
app/app/: introduction_to_bayesian_AB_testing.py  introductory_overview_of_py_mc.py  scout.py
app/app/learning/: ab_test_model_factory.py  plot_posterior.py  plot_prior.py  sample.py
app/tests/: test_pymc.py
