[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["inagaki-keisuke <kin71796@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pydantic = "^2.8.2"
pymc = "^5.16.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
mypy = "^1.10.1"
ruff = "^0.5.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
